alteracoes read.me

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pandas = "^2.2.1"
+sqlalchemy = "^2.0.29"
 
 
 [tool.poetry.group.dev.dependencies]
