--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.2.1"
 sqlalchemy = "^2.0.29"
+ipykernel = "^6.29.4"
+seaborn = "^0.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
