--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
-
-Apresentação de Teste de SQL.pptx
-Teste de SQL - versão2024.pdf
+apresentacao.pptx
+enunciado.pdf
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
